--- a/Dockerfile_dns
+++ b/Dockerfile_dns
@@ -2,8 +2,9 @@ FROM python:2.7
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
-ADD . /code/
+ADD requirements.txt /code/
 RUN pip install -r requirements.txt
+ADD . /code/
 EXPOSE "53/tcp"
 EXPOSE "53/udp"
 CMD python manage.py dns_server
