--- a/Dockerfile_proxy
+++ b/Dockerfile_proxy
@@ -2,8 +2,9 @@ FROM python:2.7
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
-ADD . /code/
+ADD requirements.txt /code/
 RUN pip install -r requirements.txt
+ADD . /code/
 EXPOSE "80/tcp"
 EXPOSE "443/tcp"
 CMD python manage.py runproxy
