--- a/Dockerfile_web
+++ b/Dockerfile_web
@@ -6,4 +6,4 @@ ADD requirements.txt /code/
 RUN pip install -r requirements.txt
 ADD . /code/
 EXPOSE "8000/tcp"
-CMD python manage.py runserver 0.0.0.0:8000
+CMD /code/startweb.sh
