--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Django==1.10
-djangorestframework==3.4.5
+Django==1.10.2
+djangorestframework==3.4.7
 psycopg2==2.6.2
-twisted==16.3.2
+twisted==16.4.1
 requests==2.11.1
 brotlipy==0.6.0
+service_identity==16.0.0
+pyopenssl==16.2.0
