--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python:
     - 2.7
+env:
+    - DEBUG=1
+cache: pip
 install:
     - pip install -r requirements.txt
     - pip install coveralls
-    - ./manage.py migrate  # unfortunately needed for Constance
-env:
-    - DEBUG=1
 script:
     coverage run --source='.' ./manage.py test
 after_success:
